--- a/device_preview/pubspec.yaml
+++ b/device_preview/pubspec.yaml
@@ -1,5 +1,5 @@
 name: device_preview
-version: 1.0.0
+version: 1.0.1
 description: Approximate how your Flutter app looks and performs on another device.
 homepage: https://github.com/aloisdeniel/flutter_device_preview
 
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   provider: ^6.0.1
   device_frame: ^1.0.0
-  freezed_annotation: ^1.0.0
+  freezed_annotation: ^2.0.3
   json_annotation: ^4.4.0
   shared_preferences: ^2.0.9
 
@@ -22,6 +22,6 @@ dev_dependencies:
     sdk: flutter 
   flutter_lints: ^1.0.4
   build_runner: ^2.1.4
-  freezed: ^1.0.0
+  freezed: ^2.0.3+1
   json_serializable: ^6.1.0
   analyzer: ^2.8.0
