--- a/device_preview/pubspec.yaml
+++ b/device_preview/pubspec.yaml
@@ -12,7 +12,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   provider: ^6.0.1
-  device_frame: ^1.0.0
+  device_frame:
+    git:
+      url: https://github.com/DavidI7/flutter_device_preview.git
+      path: device_frame
   freezed_annotation: ^2.0.3
   json_annotation: ^4.4.0
   shared_preferences: ^2.0.9
